2008-11-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules:
	* modulesets/gnome-suites-2.26.modules: added back dependency on
	mozilla to epiphany (it had been removed years ago because Mozilla
	didn't build, in r1152).

2008-11-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: if there is a Python installed in JHBuild prefix,
	set it in PYTHON environment variable, so it gets picked up by
	configure scripts.  (closes: #560872)

2008-11-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: reformat module HREF to resolve ..
	before handing it to Subversion.  (closes: #560246#c11)

2008-11-14  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules: reverted previous change
	for *-webkit modules.

2008-11-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/tinderbox.py: be more robust against improper
	unicode in program outputs.  (closes: #560579)

2008-11-14  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules: added "gmime-2-2" fetching from
	homonymous branch and make tracker depends on it; changed
	module/revison for *-webkit modules to make checkout/update works,
	i.e. remove revision key and put full path in module

2008-11-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bootstrap.py: do not let it display a message about
	bootstrap modules being outdated.

2008-11-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py: also display slave results
	summary at the top of the table.

2008-11-14  Frederic Peters  <fpeters@0d.be>

	* patches/nss.pkgconfig-and-configure.patch: updated nss Makefile patch
	to create a clean target and to remove installation of the .a file.

2008-11-13  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.24.modules: use gnome-2-24 branch of
	gnome-screensaver

2008-11-13  Frederic Peters  <fpeters@0d.be>
