@@ -138,3 +138,6 @@ jhbuildbot_svn_commits_box = None
 
 # whether to use a local copy of modulesets (instead of fetching them from svn)
 use_local_modulesets = False
+
+# whether to ignore soft dependencies
+ignore_suggests = False
