@@ -1,5 +1,12 @@
 2008-11-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/base.py, jhbuild/config.py, jhbuild/moduleset.py,
+	jhbuild/defaults.jhbuildrc, doc/C/jhbuild.xml: added a new
+	ignore-suggests option to build, update and list commands; as well as a
+	new ignore_suggests configuration variable.
+
+2008-11-15  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-suites-2.24.modules:
 	* modulesets/gnome-suites-2.26.modules: added back dependency on
 	mozilla to epiphany (it had been removed years ago because Mozilla
